Added material from Asymmetric Scattering EPL

--- a/Bibliography_Thesis.bib
+++ b/Bibliography_Thesis.bib
@@ -1,12 +1,523 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Mugagroup at 2020-11-02 16:48:35 +0100 
+%% Created for Mugagroup at 2020-11-03 17:10:04 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Ruschhaupt2004a,
+	Abstract = {Local and energy-independent complex potentials have been used in
+the past to phenomenologically simulate the measurements of
+arrival, traversal or dwell times of a quantum particle. We
+physically justify these complex potentials with a realistic
+model of atom detection by fluorescence. As approximate effective
+interactions in the short lifetime and zero detuning limit,
+purely imaginary local potentials emerge from exact non-local and
+energy-dependent complex potentials obtained by Feshbach's
+partitioning technique. Non-zero laser detunings lead instead to
+local complex potentials with a real part.},
+	Author = {A Ruschhaupt and J. A Damborenea and B Navarro and J. G Muga and G. C Hegerfeldt},
+	Date-Added = {2020-11-03 17:09:10 +0100},
+	Date-Modified = {2020-11-03 17:09:10 +0100},
+	Doi = {10.1209/epl/i2004-10046-4},
+	Journal = {Europhysics Letters ({EPL})},
+	Month = {jul},
+	Number = {1},
+	Pages = {1--7},
+	Publisher = {{IOP} Publishing},
+	Title = {Exact and approximate complex potentials for modelling time observables},
+	Url = {https://doi.org/10.1209%2Fepl%2Fi2004-10046-4},
+	Volume = {67},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1209%2Fepl%2Fi2004-10046-4},
+	Bdsk-Url-2 = {https://doi.org/10.1209/epl/i2004-10046-4}}
+
+@article{Bender1998,
+	Author = {Bender, Carl M. and Boettcher, Stefan},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1103/PhysRevLett.80.5243},
+	Issue = {24},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Jun},
+	Numpages = {0},
+	Pages = {5243--5246},
+	Publisher = {American Physical Society},
+	Title = {Real Spectra in Non-Hermitian Hamiltonians Having $PT$ Symmetry},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.80.5243},
+	Volume = {80},
+	Year = {1998},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.80.5243},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.80.5243}}
+
+@article{Brouard1994,
+	Abstract = {Complex potentials that absorb the incoming wave in a finite distance without reflection or transmission are found by a simple inversion technique, both for stationary and wavepacket scattering in one dimension.},
+	Author = {S Brouard and D Macias and J G Muga},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1088/0305-4470/27/12/008},
+	Journal = {Journal of Physics A: Mathematical and General},
+	Month = {jun},
+	Number = {12},
+	Pages = {L439--L445},
+	Publisher = {{IOP} Publishing},
+	Title = {Perfect absorbers for stationary and wavepacket scattering},
+	Volume = {27},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0305-4470%2F27%2F12%2F008},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0305-4470/27/12/008}}
+
+@article{Feshbach1958,
+	Abstract = {A new formulation of the theory of nuclear reactions based on the properties of a generalized ``optical'' potential is presented. The real and imaginary part of this potential satisfy a dispersion type relation while its poles give rise to resonances in nuclear reactions. A new derivation of the Breit-Wigner formula is given in which the concept of channel radius is not employed. This derivation is extended to the case of overlapping resonances. These results can then be employed to obtain the complex potential well model for pure elastic scattering. This potential well is shown to become real as the average width of the resonances increases. Reactions as well as elastic scattering are treated. Considering the former process in an isolated resonance, we obtain a nonresonant term analogous to the familiar potential scattering term of elastic scattering. This is just the direct interaction term which thus appears automatically in this formalism. Upon performing the appropriate energy averages over resonances, the complex potential well model is generalized so as to include inelastic scattering. The effects of the identity of nucleons is investigated. It is shown that our formalism is valid as long as the exit channels can at most contain one nucleon.},
+	Author = {Herman Feshbach},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1016/0003-4916(58)90007-1},
+	Issn = {0003-4916},
+	Journal = {Annals of Physics},
+	Number = {4},
+	Pages = {357 - 390},
+	Title = {Unified theory of nuclear reactions},
+	Volume = {5},
+	Year = {1958},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0003-4916(58)90007-1}}
+
+@article{Feshbach1962,
+	Abstract = {The effective Hamiltonian method for nuclear reactions described in an earlier paper with the same title, part I, is generalized so as to include all possible reaction types, as well as the effects arising from the identity of particles. The principal device employed, as in part I, is the projection operator which selects the open channel components of the wave function. It is found that the formal structure of part I providing a unified description for direct and compound nuclear reactions including the coupled equation description for direct reactions remains valid in this wider context. A Kapur-Peierls expansion may also be readily obtained. The concept of channel radii is not needed nor is any decomposition of the wave function for the system into angular momentum eigenstates required, so that the expressions for transition amplitudes and widths are invariant with respect to the angular momentum coupling scheme. Since the open channels can only be defined in an asymptotic sense, the corresponding projection operators are not unique. As a consequence the projection operator method has a flexibility which in the first place is consonant with the wide range of phenomena which can occur in nuclear reactions and in the second place can effectively exploit an intuitive understanding of the phenomena. Example of projection operators are obtained including one which leads to the Wigner-Eisenbud formalism, another which is appropriate for the stripping reaction, and, finally, one which takes the Pauli exclusion principle into account. Note that explicit representations of the projection operators are not required for the development of general formal results but are necessary if, eventually, quantitative calculations are made.},
+	Author = {Herman Feshbach},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1016/0003-4916(62)90221-X},
+	Issn = {0003-4916},
+	Journal = {Annals of Physics},
+	Number = {2},
+	Pages = {287 - 313},
+	Title = {A unified theory of nuclear reactions. II},
+	Volume = {19},
+	Year = {1962},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/000349166290221X},
+	Bdsk-Url-2 = {https://doi.org/10.1016/0003-4916(62)90221-X}}
+
+@article{Guo2009,
+	Author = {Guo, A. and Salamo, G. J. and Duchesne, D. and Morandotti, R. and Volatier-Ravat, M. and Aimez, V. and Siviloglou, G. A. and Christodoulides, D. N.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1103/PhysRevLett.103.093902},
+	Issue = {9},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Aug},
+	Numpages = {4},
+	Pages = {093902},
+	Publisher = {American Physical Society},
+	Title = {Observation of $\mathcal{P}\mathcal{T}$-Symmetry Breaking in Complex Optical Potentials},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.103.093902},
+	Volume = {103},
+	Year = {2009},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.103.093902},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.103.093902}}
+
+@article{Horsley2015,
+	Abstract = {Kramers--Kronig theory points to a new way of designing perfect anti-reflection surfaces.},
+	Author = {Horsley, S. A. R. and Artoni, M. and La Rocca, G. C.},
+	Da = {2015/07/01},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1038/nphoton.2015.106},
+	Id = {Horsley2015},
+	Isbn = {1749-4893},
+	Journal = {Nature Photonics},
+	Number = {7},
+	Pages = {436--439},
+	Title = {Spatial Kramers--Kronig relations and the reflection of waves},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nphoton.2015.106},
+	Volume = {9},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nphoton.2015.106}}
+
+@article{Huang2016,
+	Abstract = {We introduce broadband waveguide absorbers with near unity absorption. More specifically, we propose a compact non-parity-time-symmetric perfect absorber unit cell, consisting of two metal-dielectric-metal (MDM) stub resonators with unbalanced gain and loss side-coupled to a MDM waveguide, based on unidirectional reflectionlessness at exceptional points. With proper design, light can transport through the perfect absorber unit cell with reflection close to zero in a broad wavelength range. By cascading multiple unit cell structures, the overall absorption spectra are essentially the superposition of the absorption spectra of the individual perfect absorber unit cells, and absorption of ~ 100\&\#x00025; is supported in a wide range of frequencies.},
+	Author = {Yin Huang and Changjun Min and Georgios Veronis},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1364/OE.24.022219},
+	Journal = {Opt. Express},
+	Keywords = {Guided waves; Waveguides; Surface plasmons; Coupled resonators ; Absorption spectroscopy; Coupled mode theory; Optical systems; Photonic crystal cavities; Reflection coefficient; Refractive index},
+	Month = {Sep},
+	Number = {19},
+	Pages = {22219--22231},
+	Publisher = {OSA},
+	Title = {Broadband near total light absorption in non-PT-symmetric waveguide-cavity systems},
+	Url = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-19-22219},
+	Volume = {24},
+	Year = {2016},
+	Bdsk-Url-1 = {http://www.opticsexpress.org/abstract.cfm?URI=oe-24-19-22219},
+	Bdsk-Url-2 = {https://doi.org/10.1364/OE.24.022219}}
+
+@article{Kartashov2014,
+	Abstract = {We consider a mean-field model of a spin-orbit--coupled atomic system (Bose-Einstein condensate) accounting for pumping and removal of atoms from the two ground states. This model introduces a concept of charge-parity-time -symmetric system with a complex potential featuring a purely real spectrum. The introduced spin-orbit--coupled BEC possesses properties such as control of the stability by the external trap, singular  symmetry phase breaking, the existence of stable nonlinear modes with nonzero currents in repulsive and attractive condensates, multiply re-entrant -symmetric phase, splitting of nonlinear modes into sets of solitons (wave packets) moving with different velocities and in different directions in the condensate released from the trap.},
+	Author = {Kartashov, Y. V. and Konotop, V. V. and Zezyulin, D. A.},
+	Booktitle = {EPL (Europhysics Letters)},
+	Da = {2014/08/22},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1209/0295-5075/107/50002},
+	Isbn = {0295-5075; 1286-4854},
+	Number = {5},
+	Pages = {50002},
+	Publisher = {IOP Publishing},
+	Title = {CPT-symmetric spin-orbit--coupled condensate},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1209/0295-5075/107/50002},
+	Volume = {107},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1209/0295-5075/107/50002}}
+
+@article{Konotop2016,
+	Author = {Konotop, Vladimir V. and Yang, Jianke and Zezyulin, Dmitry A.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1103/RevModPhys.88.035002},
+	Issue = {3},
+	Journal = {Rev. Mod. Phys.},
+	Month = {Jul},
+	Numpages = {59},
+	Pages = {035002},
+	Publisher = {American Physical Society},
+	Title = {Nonlinear waves in $\mathcal{PT}$-symmetric systems},
+	Url = {https://link.aps.org/doi/10.1103/RevModPhys.88.035002},
+	Volume = {88},
+	Year = {2016},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/RevModPhys.88.035002},
+	Bdsk-Url-2 = {https://doi.org/10.1103/RevModPhys.88.035002}}
+
+@article{Konotop2017,
+	Abstract = {We consider optical media, which feature antilinear symmetries. We show that (i) spectral singularities of such media (if any) are always self-dual, i.e., correspond to coherent perfect absorber lasers; (ii) under the change of a system parameter, the self-dual spectral singularity may split into a pair of isolated complex conjugate eigenvalues, which corresponds to an unconventional and overlooked, in the most of the previous studies, scenario of the phase transition (known as parity-time \[PT\]-symmetry breaking in systems obeying PT symmetry); (iii) if the antilinear symmetry is local, i.e., does not involve any spatial reflection, then no spectral singularity is possible. Our findings are illustrated with several examples including a PT-symmetric bilayer and other complex potentials discussed in recent literature.},
+	Author = {Vladimir V. Konotop and Dmitry A. Zezyulin},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1364/OL.42.005206},
+	Journal = {Opt. Lett.},
+	Keywords = {Guided waves; Propagation; Waves; Coherent perfect absorbers; First order optics; Optical media; Optical potentials; Optical systems; Transmission coefficient},
+	Month = {Dec},
+	Number = {24},
+	Pages = {5206--5209},
+	Publisher = {OSA},
+	Title = {Phase transition through the splitting of self-dual spectral singularity in optical potentials},
+	Url = {http://ol.osa.org/abstract.cfm?URI=ol-42-24-5206},
+	Volume = {42},
+	Year = {2017},
+	Bdsk-Url-1 = {http://ol.osa.org/abstract.cfm?URI=ol-42-24-5206},
+	Bdsk-Url-2 = {https://doi.org/10.1364/OL.42.005206}}
+
+@article{Lin2011,
+	Author = {Lin, Zin and Ramezani, Hamidreza and Eichelkraut, Toni and Kottos, Tsampikos and Cao, Hui and Christodoulides, Demetrios N.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1103/PhysRevLett.106.213901},
+	Issue = {21},
+	Journal = {Phys. Rev. Lett.},
+	Month = {May},
+	Numpages = {4},
+	Pages = {213901},
+	Publisher = {American Physical Society},
+	Title = {Unidirectional Invisibility Induced by $\mathcal{P}\mathcal{T}$-Symmetric Periodic Structures},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.106.213901},
+	Volume = {106},
+	Year = {2011},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.106.213901},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.106.213901}}
+
+@article{Longhi2014,
+	Abstract = {We introduce a new class of parity-time ()-symmetric complex crystals which are almost transparent and one-way reflectionless over a broad frequency range around the Bragg frequency, i.e., unidirectionally invisible, regardless of the thickness L of the crystal. The -symmetric complex crystal is synthesized by a supersymmetric (SUSY) transformation of a Hermitian square well potential, and exact analytical expressions of transmission and reflection coefficients are given. As L is increased, the transmittance and reflectance from one side remain close to one and zero, respectively, whereas the reflectance from the other side secularly grows like owing to unidirectional Bragg scattering. This is a distinctive feature as compared to the previously studied case of the complex sinusoidal -symmetric potential at the symmetry breaking point, where transparency breaks down as .},
+	Author = {Stefano Longhi},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1088/1751-8113/47/48/485302},
+	Journal = {Journal of Physics A: Mathematical and Theoretical},
+	Month = {nov},
+	Number = {48},
+	Pages = {485302},
+	Publisher = {{IOP} Publishing},
+	Title = {A unidirectionally invisible {\textdollar}{\textbackslash}mathcal$\lbrace$P$\rbrace${\textbackslash}mathcal$\lbrace$T$\rbrace${\textdollar}-symmetric complex crystal with arbitrary thickness},
+	Url = {https://doi.org/10.1088%2F1751-8113%2F47%2F48%2F485302},
+	Volume = {47},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F1751-8113%2F47%2F48%2F485302},
+	Bdsk-Url-2 = {https://doi.org/10.1088/1751-8113/47/48/485302}}
+
+@article{Longhi2017,
+	Abstract = {In the framework of the ordinary non-relativistic quantum mechanics, it is known that a quantum particle in a rapidly oscillating bound potential with vanishing time average can be scattered off or even trapped owing to the phenomenon of dynamical (Kapitza) stabilization. A similar phenomenon occurs for scattering and trapping of optical waves. Such a remarkable result stems from the fact that, even though the particle is not able to follow the rapid external oscillations of the potential, these are still able to affect the average dynamics by means of an effective ---albeit small--- nonvanishing potential contribution. Here we consider the scattering and dynamical stabilization problem for matter or classical waves by a bound potential with oscillating ac amplitude f(t) in the framework of a non-Hermitian extension of the Schr{\"o}dinger equation, and predict that for a wide class of imaginary amplitude modulations f(t) possessing a one-sided Fourier spectrum, the oscillating potential is effectively canceled, i.e., it does not have any effect on the particle dynamics, contrary to what happens in the Hermitian case.},
+	Author = {S. Longhi},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1209/0295-5075/118/20004},
+	Journal = {{EPL} (Europhysics Letters)},
+	Month = {apr},
+	Number = {2},
+	Pages = {20004},
+	Publisher = {{IOP} Publishing},
+	Title = {Rapidly oscillating scatteringless non-Hermitian potentials and the absence of Kapitza stabilization},
+	Url = {https://doi.org/10.1209%2F0295-5075%2F118%2F20004},
+	Volume = {118},
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1209%2F0295-5075%2F118%2F20004},
+	Bdsk-Url-2 = {https://doi.org/10.1209/0295-5075/118/20004}}
+
+@article{Mostafazadeh2010,
+	Author = {Mostafazadeh, A.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1142/S0219887810004816},
+	Journal = {International Journal of Geometric Methods in Modern Physics},
+	Month = {jan},
+	Number = {7},
+	Pages = {1191},
+	Title = {Pseudo-Hermitian Representation of Quantum Mechanics},
+	Volume = {07},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1142/S0219887810004816}}
+
+@article{Mostafazadeh2014,
+	Author = {Mostafazadeh, Ali},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1103/PhysRevA.89.012709},
+	Issue = {1},
+	Journal = {Phys. Rev. A},
+	Month = {Jan},
+	Numpages = {8},
+	Pages = {012709},
+	Publisher = {American Physical Society},
+	Title = {Transfer matrices as nonunitary $S$ matrices, multimode unidirectional invisibility, and perturbative inverse scattering},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.89.012709},
+	Volume = {89},
+	Year = {2014},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.89.012709},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.89.012709}}
+
+@article{Muga2004,
+	Abstract = {We review the construction and use of complex potentials in reactive scattering and other molecular collisions to calculate continuum quantities (such as state-to-state transition probabilities, cumulative reaction probabilities, or resonance characteristics) with finite grid or finite basis methods. The success of the approach is greatly based on its simplicity. In general these potentials are adjusted phenomenologically or optimized for achieving an absorptive and non-reflecting boundary. For further progress the conceptual and formal framework of the complex potentials and the efficiency of their numerical implementation must be investigated more deeply. We present along this line a formal theory of scattering for complex potentials in one dimension, as well as a detailed account of the functional forms and construction methods proposed. We also demonstrate that part of the acquired knowledge may be transferred to ``physical'' absorbing potentials, i.e., effective interactions that can be tailored physically (rather than numerically) to accomplish e.g. an improved atomic detection by fluorescence.},
+	Author = {J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1016/j.physrep.2004.03.002},
+	Issn = {0370-1573},
+	Journal = {Physics Reports},
+	Number = {6},
+	Pages = {357 - 426},
+	Title = {Complex absorbing potentials},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0370157304001218},
+	Volume = {395},
+	Year = {2004},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0370157304001218},
+	Bdsk-Url-2 = {https://doi.org/10.1016/j.physrep.2004.03.002}}
+
+@article{Nixon2016,
+	Author = {Nixon, Sean and Yang, Jianke},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1103/PhysRevA.93.031802},
+	Issue = {3},
+	Journal = {Phys. Rev. A},
+	Month = {Mar},
+	Numpages = {5},
+	Pages = {031802},
+	Publisher = {American Physical Society},
+	Title = {All-real spectra in optical systems with arbitrary gain-and-loss distributions},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevA.93.031802},
+	Volume = {93},
+	Year = {2016},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevA.93.031802},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevA.93.031802}}
+
+@article{Nixon2016a,
+	Abstract = {Many classes of non-parity-time (PT)-symmetric waveguides with arbitrary gain and loss distributions still possess all-real linear spectrum or exhibit phase transition. In this Letter, nonlinear light behaviors in these complex waveguides are probed analytically near a phase transition. Using multi-scale perturbation methods, a nonlinear ordinary differential equation (ODE) is derived for the light's amplitude evolution. This ODE predicts that a single class of these non-PT-symmetric waveguides supports soliton families and amplitude-oscillating solutions both above and below linear phase transition, in close analogy with PT-symmetric systems. For the other classes of waveguides, the light's intensity always amplifies under the effect of nonlinearity, even if the waveguide is below the linear phase transition. These analytical predictions are confirmed by direct computations of the full system.},
+	Author = {Sean Nixon and Jianke Yang},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1364/OL.41.002747},
+	Journal = {Opt. Lett.},
+	Keywords = {Nonlinear optics; Spatial solitons ; Light intensity; Numerical simulation; Optical potentials; Quantum electronics; Refractive index; Waveguides},
+	Month = {Jun},
+	Number = {12},
+	Pages = {2747--2750},
+	Publisher = {OSA},
+	Title = {Nonlinear light behaviors near phase transition in non-parity-time-symmetric complex waveguides},
+	Url = {http://ol.osa.org/abstract.cfm?URI=ol-41-12-2747},
+	Volume = {41},
+	Year = {2016},
+	Bdsk-Url-1 = {http://ol.osa.org/abstract.cfm?URI=ol-41-12-2747},
+	Bdsk-Url-2 = {https://doi.org/10.1364/OL.41.002747}}
+
+@article{Palao1998,
+	Author = {Palao, J. P. and Muga, J. G. and Sala, R.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1103/PhysRevLett.80.5469},
+	Issue = {25},
+	Journal = {Phys. Rev. Lett.},
+	Month = {Jun},
+	Numpages = {0},
+	Pages = {5469--5472},
+	Publisher = {American Physical Society},
+	Title = {Composite Absorbing Potentials},
+	Url = {https://link.aps.org/doi/10.1103/PhysRevLett.80.5469},
+	Volume = {80},
+	Year = {1998},
+	Bdsk-Url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.80.5469},
+	Bdsk-Url-2 = {https://doi.org/10.1103/PhysRevLett.80.5469}}
+
+@article{Palao1998a,
+	Abstract = {A simple procedure to construct absorbing potentials is provided. It is based on adding a series of equal length complex square barriers and optimizing their real and imaginary parts to achieve maximum absorption at a selected set of momenta. The method is flexible, robust, and easy to apply. The absorption widths obtained are better than other known functional forms for the important low momentum region. A comparison is made with parameters used for an H+H2 collinear collision.},
+	Author = {J.P. Palao and J.G. Muga},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1016/S0009-2614(98)00635-6},
+	Issn = {0009-2614},
+	Journal = {Chemical Physics Letters},
+	Number = {1},
+	Pages = {1 - 6},
+	Title = {A simple construction procedure of absorbing potentials},
+	Url = {http://www.sciencedirect.com/science/article/pii/S0009261498006356},
+	Volume = {292},
+	Year = {1998},
+	Bdsk-Url-1 = {http://www.sciencedirect.com/science/article/pii/S0009261498006356},
+	Bdsk-Url-2 = {https://doi.org/10.1016/S0009-2614(98)00635-6}}
+
+@article{Ruschhaupt2005,
+	Abstract = {A physical realization of scattering by -symmetric potentials is provided: we show that the Maxwell equations, for an electromagnetic wave travelling along a planar slab waveguide filled with gain and absorbing media in contiguous regions, can be approximated in a parameter range by a Schr{\"o}dinger equation with a -symmetric scattering potential.},
+	Author = {A Ruschhaupt and F Delgado and J G Muga},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1088/0305-4470/38/9/l03},
+	Journal = {Journal of Physics A: Mathematical and General},
+	Month = {feb},
+	Number = {9},
+	Pages = {L171--L176},
+	Publisher = {{IOP} Publishing},
+	Title = {Physical realization of -symmetric potential scattering in a planar slab waveguide},
+	Url = {https://doi.org/10.1088%2F0305-4470%2F38%2F9%2Fl03},
+	Volume = {38},
+	Year = 2005,
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0305-4470%2F38%2F9%2Fl03},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0305-4470/38/9/l03}}
+
+@article{Snieder1990,
+	Abstract = {A perturbation analysis of nonlinear inversion is presented. As a prototype of nonlinear inversion, inverse scattering with the Marchenko equation is considered from a perturbative point of view. It is shown that inverse scattering methods using the Marchenko equation implicitly reconstruct the potential by removing the nonlinearities from the data, and by performing a Born inversion of the resulting linear component in the data (the first Born approximation). This is illustrated with a one-dimensional example. This interpretation of the mechanism of inverse scattering algorithms clarifies the 'miracle of Newton', and has profound consequences for both the theoretical and the practical aspects of inverse scattering, in particular for the stability of inverse scattering schemes.},
+	Author = {R Snieder},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1088/0266-5611/6/2/008},
+	Journal = {Inverse Problems},
+	Month = {apr},
+	Number = {2},
+	Pages = {247--266},
+	Publisher = {{IOP} Publishing},
+	Title = {The role of the Born approximation in nonlinear inversion},
+	Volume = {6},
+	Year = {1990},
+	Bdsk-Url-1 = {https://doi.org/10.1088%2F0266-5611%2F6%2F2%2F008},
+	Bdsk-Url-2 = {https://doi.org/10.1088/0266-5611/6/2/008}}
+
+@book{Taylor1972,
+	Author = {Taylor, J.R.},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Isbn = {9780471849001},
+	Lccn = {75037938},
+	Publisher = {Wiley},
+	Title = {Scattering Theory: Quantum Theory on Nonrelativistic Collisions},
+	Year = {1972},
+	Bdsk-Url-1 = {https://books.google.es/books?id=ncLvAAAAMAAJ}}
+
+@article{Xu2014,
+	Author = {Y. {Xu} and L. {Feng} and M. {Lu} and Y. {Chen}},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1109/JPHOT.2013.2295462},
+	Journal = {IEEE Photonics Journal},
+	Number = {1},
+	Pages = {1-7},
+	Title = {Unidirectional Transmission Based on a Passive PT Symmetric Grating With a Nonlinear Silicon Distributed Bragg Reflector Cavity},
+	Volume = {6},
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.1109/JPHOT.2013.2295462}}
+
+@article{Yin2013,
+	Abstract = {Unique opportunities arise from exceptional points that coalesce states of an open system in synthetic photonic media, where delicately balanced complex dielectric functions produce unprecedented optical properties.},
+	Author = {Yin, Xiaobo and Zhang, Xiang},
+	Da = {2013/03/01},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1038/nmat3576},
+	Id = {Yin2013},
+	Isbn = {1476-4660},
+	Journal = {Nature Materials},
+	Number = {3},
+	Pages = {175--177},
+	Title = {Unidirectional light propagation at exceptional points},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nmat3576},
+	Volume = {12},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nmat3576}}
+
+@article{Yu2009,
+	Abstract = {Achieving on-chip optical signal isolation is a fundamental difficulty in integrated photonics1. The need to overcome this difficulty is becoming increasingly urgent, especially with the emergence of silicon nano-photonics2,3,4, which promises to create on-chip optical systems at an unprecedented scale of integration. Until now, there have been no techniques that provide complete on-chip signal isolation using materials or processes that are fundamentally compatible with silicon CMOS processes. Based on the effects of photonic transitions5,6, we show here that a linear, broadband and non-reciprocal isolation can be accomplished by spatial--temporal refractive index modulations that simultaneously impart frequency and wavevector shifts during the photonic transition process. We further show that a non-reciprocal effect can be accomplished in dynamically modulated micrometre-scale ring-resonator structures. This work demonstrates that on-chip isolation can be accomplished with dynamic photonic structures in standard material systems that are widely used for integrated optoelectronic applications.},
+	Author = {Yu, Zongfu and Fan, Shanhui},
+	Da = {2009/02/01},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1038/nphoton.2008.273},
+	Id = {Yu2009},
+	Isbn = {1749-4893},
+	Journal = {Nature Photonics},
+	Number = {2},
+	Pages = {91--94},
+	Title = {Complete optical isolation created by indirect interband photonic transitions},
+	Ty = {JOUR},
+	Url = {https://doi.org/10.1038/nphoton.2008.273},
+	Volume = {3},
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1038/nphoton.2008.273}}
+
+@article{Zezyulin2017,
+	Abstract = {A dual-core waveguide with balanced gain and loss in different arms and with intermodal coupling is considered. The system is not invariant under the conventional PT symmetry, but obeys CPT symmetry where an additional spatial inversion C corresponds to swapping the coupler arms. We show that second-order dispersion of coupling allows for unbroken CPT symmetry and supports propagation of stable vector solitons along the coupler. Small-amplitude solitons are found in explicit form. The combined effect of gain-and-loss and dispersive coupling results in several interesting features which include a separation between the components in different arms, nontrivial dependence of stability of a soliton on its velocity, and the existence of more complex stationary two-hump solutions. Unusual decay dynamics of unstable solitons are also discussed.},
+	Author = {Dmitry A. Zezyulin and Yaroslav V. Kartashov and Vladimir V. Konotop},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {10.1364/OL.42.001273},
+	Journal = {Opt. Lett.},
+	Keywords = {Guided waves; Propagation; Bright solitons; Dark solitons; Dispersion; Fourier transforms; Solitons; Vector solitons},
+	Month = {Apr},
+	Number = {7},
+	Pages = {1273--1276},
+	Publisher = {OSA},
+	Title = {CPT-symmetric coupler with intermodal dispersion},
+	Url = {http://ol.osa.org/abstract.cfm?URI=ol-42-7-1273},
+	Volume = {42},
+	Year = {2017},
+	Bdsk-Url-1 = {http://ol.osa.org/abstract.cfm?URI=ol-42-7-1273},
+	Bdsk-Url-2 = {https://doi.org/10.1364/OL.42.001273}}
+
+@inbook{Znojil2015,
+	Abstract = {Summary This chapter commences with a discussion on the challenge of non-Hermiticity in quantum physics. It talks about new classes of quantum bound states and their probabilistic interpretations. Simplified Schr{\"o}dinger equations are among the innovations in mathematical physics discussed in this chapter. The Homer's story about the six-headed monster Scylla which, together with the all-destroying whirlpool of Charybdis is reviewed. No surprise that in the mythology of old Greeks the fabulous Odysseus followed the advise by Kirke and that, in order to avoid the deadly Charybdis, he rather sacrificed six of his men to Scylla while saving the rest. The story of non-Hermitian Hamiltonians in quantum physics presents a message that allows us to reclassify the Bender's and Boettcher's apparent acceptance of the Charybdis-resembling evils of nonunitarity in 1998 as a promising and well-working strategy. At present, a new round of attempted amendments of the formulation of the theory has started.},
+	Author = {Znojil, M.},
+	Booktitle = {Non‐Selfadjoint Operators in Quantum Physics},
+	Chapter = {1},
+	Date-Added = {2020-11-03 17:03:08 +0100},
+	Date-Modified = {2020-11-03 17:03:08 +0100},
+	Doi = {https://doi.org/10.1002/9781118855300.ch1},
+	Isbn = {9781118855300},
+	Pages = {7-58},
+	Publisher = {Wiley},
+	Title = {Non-self-adjoint operators in quantum physics: ideas, people, and trends},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1002/9781118855300.ch1}}
 
 @article{Hu2006a,
 	Author = {Hu, B. and He, D. and Yang, L. and Zhang, Y.},
