--- a/Thesis.tex
+++ b/Thesis.tex
@@ -179,6 +179,8 @@ Do not forget about the people that has been by your side and supported you.
 \addcontentsline{toc}{chapter}{Introduction}
 \input{./Chapters/Introduction} %Introduction
 
+\input{./Chapters/ChapterAsymmetricScattering} %Asymmetric Scattering nonhermitian
+
 \input{./Chapters/ChapterLocalRectification} %Rectification chain of Ions
 \input{./Chapters/RectificationChainOfIons} %Rectification chain of Ions
 \input{./Chapters/ChapterToyModel} %Rectification Toy Model
